--- a/style.css
+++ b/style.css
@@ -40,7 +40,8 @@ body {
     font-family: "Lato", sans-serif;
     font-size: clamp(1.6rem, 5vw, 2rem);
     line-height: 1.5;
-    background-color: #F7F7F7;
+    background-color: var(--clr-gray);
+    color: var(--clr-text);
 }
 
 img {
